syntax = "proto3";

option csharp_namespace = "GrpcDemo";

message SendRandomNumbersRequest {
    int32 number = 1;
}

message SendRandomNumbersResponse {
    int32 count = 1;
    int32 sum = 2;
}

service RandomNumbers {
    rpc SendRandomNumbers(stream SendRandomNumbersRequest) returns ( SendRandomNumbersResponse);
}